--- a/src/pages/SingleProductPage.scss
+++ b/src/pages/SingleProductPage.scss
@@ -4,3 +4,9 @@ img {
 .product-text-block {
   margin-top: -5rem;
 }
+
+.col-sm-6,
+.col-sm-8 {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
