--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -1,6 +1,16 @@
 .home-page {
-  img {
+  @media (max-width: 400px) {
+    .col-sm-12 {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+    }
+  }
+  .home-hero-image {
     // border: 1rem dotted red;
+    @media (max-width: 700px) {
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+    }
   }
   .btn {
     padding: 2rem 5rem;
