--- a/src/pages/cart-page/CartPage.scss
+++ b/src/pages/cart-page/CartPage.scss
@@ -1,5 +1,9 @@
 .cart-page {
-  .total-block {
-    // border: 1px solid red;
+  // border: 1rem dotted red;
+
+  @media (max-width: 400px) {
+    h1.display-2 {
+      font-size: 4rem;
+    }
   }
 }
