--- a/src/pages/ShopPage.scss
+++ b/src/pages/ShopPage.scss
@@ -1,5 +1,14 @@
 .shop-page {
   // border: 1rem dotted red;
+  .card {
+    border: none !important;
+    &:hover {
+      box-shadow: 2px 2px 30px darken($color: #e3e3e3, $amount: 10%);
+    }
+    .card-title {
+      font-size: 1.8rem;
+    }
+  }
 
   @media (max-width: 400px) {
     h1.display-2 {
